fix label case to match github label casing

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,6 @@
 name: 🐛 Bug
 description: Report an issue to help improve the project.
-labels: ["🛠 Fix", "🐛 Bug"]
+labels: ["🛠 fix", "🐛 bug"]
 body:
   - type: textarea
     id: description
